--- a/styles/hero.css
+++ b/styles/hero.css
@@ -27,7 +27,6 @@
 .text h1 em{
     color: #FF6F08;
 }
-
 .third-btn{
     display: inline-flex;
     gap: 15px;
@@ -39,4 +38,10 @@
 .btn{
     display: grid;
     justify-content: end;
+}
+
+@media only screen and (max-width:825px){
+    .text h1{
+        font-size: 100px;
+    }
 }
