--- a/styles/secondary.css
+++ b/styles/secondary.css
@@ -143,3 +143,9 @@ button:hover{
     margin-top: -75px;
     margin-bottom: 25px;
 }
+
+@media only screen and (max-width:825px){
+    .ily-container h1 {
+        font-size: 50px;
+    }
+}
